[gd_scene load_steps=4 format=3 uid="uid://cbibj3uq0edkj"]

[ext_resource type="Script" uid="uid://bmboynohrho1c" path="res://scripts/menu.gd" id="1_e5g8k"]
[ext_resource type="Texture2D" uid="uid://cnxbag0mr0esu" path="res://Gemini_Generated_Image_k7mz1lk7mz1lk7mz.png" id="2_8hxod"]

[sub_resource type="Theme" id="Theme_8hxod"]
default_font_size = 40

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8hxod")
script = ExtResource("1_e5g8k")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8hxod")

[node name="Button_play" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -32.0
offset_right = 98.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="VBoxContainer_game_mode" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -198.0
offset_right = 292.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Button_2_player" type="Button" parent="VBoxContainer_game_mode"]
layout_mode = 2
size_flags_vertical = 3
text = "1 vs 1
"

[node name="Button_3_player" type="Button" parent="VBoxContainer_game_mode"]
custom_minimum_size = Vector2(0, 4.955)
layout_mode = 2
size_flags_vertical = 3
text = "3 player Free for All"

[node name="VBoxContainer2_select_role" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -354.0
offset_right = 211.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2_select_role"]
layout_mode = 2
text = "PLAYER : n"
horizontal_alignment = 1

[node name="Button_role_1" type="Button" parent="VBoxContainer2_select_role"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button_role_2" type="Button" parent="VBoxContainer2_select_role"]
layout_mode = 2
size_flags_vertical = 3
text = "
"

[node name="Button_role_3" type="Button" parent="VBoxContainer2_select_role"]
layout_mode = 2
size_flags_vertical = 3
text = "
"

[connection signal="pressed" from="Button_play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer_game_mode/Button_2_player" to="." method="_on_button_2_player_pressed"]
[connection signal="pressed" from="VBoxContainer_game_mode/Button_3_player" to="." method="_on_button_3_player_pressed"]
[connection signal="pressed" from="VBoxContainer2_select_role/Button_role_1" to="." method="_on_button_role_1_pressed"]
[connection signal="pressed" from="VBoxContainer2_select_role/Button_role_2" to="." method="_on_button_role_2_pressed"]
[connection signal="pressed" from="VBoxContainer2_select_role/Button_role_3" to="." method="_on_button_role_3_pressed"]
